# face_recognition_mnn

./: CMakeLists.txt  README.md  fr_main.cpp  fr_trial_run.cpp  test_fr.cpp
include/: arcface.h  baseModel.h  faceProcess.h  retinaface.h
src/: arcface.cpp  baseModel.cpp  retinaface.cpp
